pkginclude_HEADERS = \
	MyGUI_SharedPanelAlphaOverlayElement.h \
	MyGUI.h \
	MyGUI_Button.h \
	MyGUI_DelegateImplement.h \
	MyGUI_ChildSkinInfo.h \
	MyGUI_WidgetUserData.h \
	MyGUI_CroppedRectangleInterface.h \
	MyGUI_TabFactory.h \
	MyGUI_PointerInfo.h \
	MyGUI_InputManager.h \
	MyGUI_ProgressFactory.h \
	MyGUI_Platform.h \
	MyGUI_LayerItemInfo.h \
	MyGUI_WidgetSkinInfo.h \
	MyGUI_ButtonFactory.h \
	MyGUI_ItemBox.h \
	MyGUI_LayerInfo.h \
	MyGUI_Delegate.h \
	MyGUI_EditFactory.h \
	MyGUI_Common.h \
	TRect.h \
	MyGUI_OneOverlayDataInfo.h \
	MyGUI_RenderBoxFactory.h \
	MyGUI_Macros.h \
	MyGUI_Utility.h \
	MyGUI_TextChangeHistory.h \
	MyGUI_TextIterator.h \
	MyGUI_ComboBoxFactory.h \
	MyGUI_MultiListFactory.h \
	MyGUI_WidgetFactoryInterface.h \
	MyGUI_Tab.h \
	MyGUI_LogManager.h \
	MyGUI_SubWidgetManager.h \
	MyGUI_WindowFactory.h \
	TCoord.h \
	MyGUI_RenderOut.h \
	MyGUI_FrameListener.h \
	MyGUI_Sheet.h \
	MyGUI_MultiList.h \
	MyGUI_WidgetDefines.h \
	MyGUI_Plugin.h \
	MyGUI_Gui.h \
	MyGUI_MessageFactory.h \
	MyGUI_MainSkin.h \
	MyGUI_SubSkin.h \
	MyGUI_HScroll.h \
	MyGUI_Font.h \
	MyGUI_ItemBoxFactory.h \
	MyGUI_UnlinkWidget.h \
	MyGUI_WidgetOIS.h \
	MyGUI_WidgetEvent.h \
	MyGUI_SheetFactory.h \
	MyGUI_TextEditOverlayElementFactory.h \
	MyGUI_FontManager.h \
	MyGUI_TextSimpleOverlayElement.h \
	MyGUI_WidgetFactory.h \
	MyGUI_TextEditOverlayElement.h \
	MyGUI_Message.h \
	MyGUI_VScroll.h \
	MyGUI_SharedPanelAlphaOverlayElementFactory.h \
	MyGUI_StaticImage.h \
	MyGUI_ComboBox.h \
	MyGUI_SkinManager.h \
	MyGUI_ResourcePath.h \
	MyGUI_LayoutManager.h \
	MyGUI_StaticTextFactory.h \
	MyGUI_SubWidgetFactoryInterface.h \
	MyGUI_HScrollFactory.h \
	MyGUI_SubWidgetTextInterface.h \
	MyGUI_DynLib.h \
	MyGUI_MaskPeekInfo.h \
	MyGUI_List.h \
	MyGUI_ControllerItem.h \
	MyGUI_Widget.h \
	MyGUI_ClipboardManager.h \
	MyGUI_TextSimpleOverlayElementFactory.h \
	MyGUI_RenderBox.h \
	MyGUI_EnumCharInfo.h \
	MyGUI_ListFactory.h \
	MyGUI_WidgetManager.h \
	MyGUI_VScrollFactory.h \
	MyGUI_PointerManager.h \
	MyGUI_PluginManager.h \
	MyGUI_TextEdit.h \
	MyGUI_LayerManager.h \
	MyGUI_Prerequest.h \
	MyGUI_Instance.h \
	MyGUI_SubWidgetBinding.h \
	MyGUI_Edit.h \
	MyGUI_TextSimple.h \
	MyGUI_StaticText.h \
	MyGUI_XmlDocument.h \
	TPoint.h \
	MyGUI_DynLibManager.h \
	MyGUI_ControllerManager.h \
	MyGUI_StaticImageFactory.h \
	MyGUI_LogStream.h \
	MyGUI_CastWidget.h \
	TSize.h \
	MyGUI_Progress.h \
	MyGUI_AlignInfo.h \
	MyGUI_Window.h \
	MyGUI_ControllerFadeAlpha.h \
	MyGUI_Types.h
