pkginclude_HEADERS = \
	MyGUI_ActionController.h \
	MyGUI_Align.h\
	MyGUI_Any.h\
	MyGUI_ButtonFactory.h\
	MyGUI_Button.h\
	MyGUI_CastWidget.h\
	MyGUI_ChildSkinInfo.h\
	MyGUI_ClipboardManager.h\
	MyGUI_ComboBoxFactory.h\
	MyGUI_ComboBox.h\
	MyGUI_Common.h\
	MyGUI_ControllerEdgeHide.h\
	MyGUI_ControllerFadeAlpha.h\
	MyGUI_ControllerItem.h\
	MyGUI_ControllerManager.h\
	MyGUI_ControllerPosition.h\
	MyGUI_DDContainerFactory.h\
	MyGUI_DDContainer.h\
	MyGUI_Delegate.h\
	MyGUI_DelegateImplement.h\
	MyGUI_DelegateManager.h\
	MyGUI_DrawItem.h\
	MyGUI_DynLib.h\
	MyGUI_DynLibManager.h\
	MyGUI_EditFactory.h\
	MyGUI_Edit.h\
	MyGUI_EditText.h\
	MyGUI_EnumCharInfo.h\
	MyGUI_Enumerator.h\
	MyGUI_Font.h\
	MyGUI_FontManager.h\
	MyGUI_FooBarFactory.h\
	MyGUI_FooBar.h\
	MyGUI_Guid.h\
	MyGUI_Gui.h\
	MyGUI.h\
	MyGUI_HScrollFactory.h\
	MyGUI_HScroll.h\
	MyGUI_ICroppedRectangle.h\
	MyGUI_ImageInfo.h\
	MyGUI_InputDefine.h\
	MyGUI_InputManager.h\
	MyGUI_Instance.h\
	MyGUI_IResource.h\
	MyGUI_ISubWidgetFactory.h\
	MyGUI_ISubWidget.h\
	MyGUI_ISubWidgetRect.h\
	MyGUI_ISubWidgetText.h\
	MyGUI_ItemBoxFactory.h\
	MyGUI_ItemBox.h\
	MyGUI_ItemDropInfo.h\
	MyGUI_IUnlinkWidget.h\
	MyGUI_IWidgetCreator.h\
	MyGUI_IWidgetFactory.h\
	MyGUI_LanguageManager.h\
	MyGUI_LayerItem.h\
	MyGUI_LayerItemKeeper.h\
	MyGUI_LayerKeeper.h\
	MyGUI_LayerManager.h\
	MyGUI_LayoutManager.h\
	MyGUI_ListFactory.h\
	MyGUI_List.h\
	MyGUI_LogManager.h\
	MyGUI_LogStream.h\
	MyGUI_Macros.h\
	MyGUI_MainSkin.h\
	MyGUI_MaskPeekInfo.h\
	MyGUI_MenuBarFactory.h\
	MyGUI_MenuBar.h\
	MyGUI_MessageFactory.h\
	MyGUI_Message.h\
	MyGUI_MultiListFactory.h\
	MyGUI_MultiList.h\
	MyGUI_Platform.h\
	MyGUI_Plugin.h\
	MyGUI_PluginManager.h\
	MyGUI_PointerInfo.h\
	MyGUI_PointerManager.h\
	MyGUI_PopupMenuFactory.h\
	MyGUI_PopupMenu.h\
	MyGUI_Prerequest.h\
	MyGUI_ProgressFactory.h\
	MyGUI_Progress.h\
	MyGUI_RawRect.h\
	MyGUI_RenderBoxFactory.h\
	MyGUI_RenderBox.h\
	MyGUI_RenderItem.h\
	MyGUI_RenderOut.h\
	MyGUI_ResourceImageSet.h\
	MyGUI_ResourceManager.h\
	MyGUI_ResourcePath.h\
	MyGUI_Rtti.h\
	MyGUI_ScrollViewFactory.h\
	MyGUI_ScrollView.h\
	MyGUI_SheetFactory.h\
	MyGUI_Sheet.h\
	MyGUI_SimpleText.h\
	MyGUI_SkinManager.h\
	MyGUI_StaticImageFactory.h\
	MyGUI_StaticImage.h\
	MyGUI_StaticTextFactory.h\
	MyGUI_StaticText.h\
	MyGUI_SubSkin.h\
	MyGUI_SubWidgetBinding.h\
	MyGUI_SubWidgetManager.h\
	MyGUI_TabFactory.h\
	MyGUI_Tab.h\
	MyGUI_TextChangeHistory.h\
	MyGUI_TextIterator.h\
	MyGUI_TileRect.h\
	MyGUI_Types.h\
	MyGUI_Utility.h\
	MyGUI_VScrollFactory.h\
	MyGUI_VScroll.h\
	MyGUI_WidgetDefines.h\
	MyGUI_WidgetEvent.h\
	MyGUI_WidgetFactory.h\
	MyGUI_Widget.h\
	MyGUI_WidgetManager.h\
	MyGUI_WidgetOIS.h\
	MyGUI_WidgetSkinInfo.h\
	MyGUI_WidgetToolTip.h\
	MyGUI_WidgetTranslate.h\
	MyGUI_WidgetUserData.h\
	MyGUI_WindowFactory.h\
	MyGUI_Window.h\
	MyGUI_XmlDocument.h\
	TCoord.h\
	TPoint.h\
	TRect.h\
	TSize.h