INCLUDES = $(STLPORT_CFLAGS) $(FT2_CFLAGS) $(OGRE_CFLAGS) $(OIS_CFLAGS) -I$(top_srcdir)/MyGUIEngine/include $(CFLAGS)

lib_LTLIBRARIES=libmygui.la
libmygui_la_SOURCES = \
	MyGUI_DynLib.cpp \
	MyGUI_ItemBox.cpp \
	MyGUI_List.cpp \
	MyGUI_TextSimple.cpp \
	MyGUI_Window.cpp \
	MyGUI_PluginManager.cpp \
	MyGUI_SkinManager.cpp \
	MyGUI_MultiList.cpp \
	MyGUI_Message.cpp \
	MyGUI_TextEditOverlayElement.cpp \
	MyGUI_Sheet.cpp \
	MyGUI_SubSkin.cpp \
	MyGUI_EditFactory.cpp \
	MyGUI_StaticImage.cpp \
	MyGUI_Progress.cpp \
	MyGUI_PointerManager.cpp \
	MyGUI_MainSkin.cpp \
	MyGUI_Edit.cpp \
	MyGUI_ButtonFactory.cpp \
	MyGUI_LayoutManager.cpp \
	MyGUI_Tab.cpp \
	MyGUI_ControllerFadeAlpha.cpp \
	MyGUI_TextEdit.cpp \
	MyGUI_TextIterator.cpp \
	MyGUI_StaticImageFactory.cpp \
	MyGUI_ListFactory.cpp \
	MyGUI_RenderBoxFactory.cpp \
	MyGUI_DynLibManager.cpp \
	MyGUI_ComboBox.cpp \
	MyGUI_StaticText.cpp \
	MyGUI_WidgetManager.cpp \
	MyGUI_LogStream.cpp \
	MyGUI_SubWidgetManager.cpp \
	MyGUI_HScroll.cpp \
	MyGUI_Button.cpp \
	MyGUI_InputManager.cpp \
	MyGUI_SheetFactory.cpp \
	MyGUI_ProgressFactory.cpp \
	MyGUI_FontManager.cpp \
	MyGUI_ControllerManager.cpp \
	MyGUI_RenderOut.cpp \
	MyGUI_VScroll.cpp \
	MyGUI_Font.cpp \
	MyGUI_Widget.cpp \
	MyGUI_VScrollFactory.cpp \
	MyGUI_MultiListFactory.cpp \
	MyGUI_ClipboardManager.cpp \
	MyGUI_RenderBox.cpp \
	MyGUI_LayerManager.cpp \
	MyGUI_SharedPanelAlphaOverlayElement.cpp \
	MyGUI_WindowFactory.cpp \
	MyGUI_WidgetFactory.cpp \
	MyGUI_Gui.cpp \
	MyGUI_TabFactory.cpp \
	MyGUI_ComboBoxFactory.cpp \
	MyGUI_TextSimpleOverlayElement.cpp \
	MyGUI_ItemBoxFactory.cpp \
	MyGUI_MessageFactory.cpp \
	MyGUI_XmlDocument.cpp \
	MyGUI_LayerItemInfo.cpp \
	MyGUI_LogManager.cpp \
	MyGUI_HScrollFactory.cpp \
	MyGUI_StaticTextFactory.cpp

libmygui_la_LDFLAGS = -release @PACKAGE_VERSION@
libmygui_la_LIBADD = $(STLPORT_LIBS) $(FT2_LIBS) $(OGRE_LIBS) $(OIS_LIBS)
