INCLUDES = $(STLPORT_CFLAGS) $(FT2_CFLAGS) $(OGRE_CFLAGS) $(OIS_CFLAGS) -I$(top_srcdir)/MyGUIEngine/include $(CFLAGS)

lib_LTLIBRARIES=libmygui.la
libmygui_la_SOURCES = \
	MyGUI_ActionController.cpp\
	MyGUI_Button.cpp\
	MyGUI_ButtonFactory.cpp\
	MyGUI_ClipboardManager.cpp\
	MyGUI_ColourRect.cpp\
	MyGUI_ComboBox.cpp\
	MyGUI_ComboBoxFactory.cpp\
	MyGUI_ControllerEdgeHide.cpp\
	MyGUI_ControllerFadeAlpha.cpp\
	MyGUI_ControllerManager.cpp\
	MyGUI_ControllerPosition.cpp\
	MyGUI_DynLib.cpp\
	MyGUI_DynLibManager.cpp\
	MyGUI_Edit.cpp\
	MyGUI_EditFactory.cpp\
	MyGUI_EditText.cpp\
	MyGUI_Font.cpp\
	MyGUI_FontManager.cpp\
	MyGUI_FooBar.cpp\
	MyGUI_FooBarFactory.cpp\
	MyGUI_Gui.cpp\
	MyGUI_HScroll.cpp\
	MyGUI_HScrollFactory.cpp\
	MyGUI_InputManager.cpp\
	MyGUI_ItemBox.cpp\
	MyGUI_ItemBoxFactory.cpp\
	MyGUI_LayerItemInfo.cpp\
	MyGUI_LayerItemKeeper.cpp\
	MyGUI_LayerKeeper.cpp\
	MyGUI_LayerManager.cpp\
	MyGUI_LayoutManager.cpp\
	MyGUI_List.cpp\
	MyGUI_ListFactory.cpp\
	MyGUI_LogManager.cpp\
	MyGUI_LogStream.cpp\
	MyGUI_MainSkin.cpp\
	MyGUI_MenuBar.cpp\
	MyGUI_MenuBarFactory.cpp\
	MyGUI_Message.cpp\
	MyGUI_MessageFactory.cpp\
	MyGUI_MultiList.cpp\
	MyGUI_MultiListFactory.cpp\
	MyGUI_PluginManager.cpp\
	MyGUI_PointerManager.cpp\
	MyGUI_PopupMenu.cpp\
	MyGUI_PopupMenuFactory.cpp\
	MyGUI_Progress.cpp\
	MyGUI_ProgressFactory.cpp\
	MyGUI_RenderBox.cpp\
	MyGUI_RenderBoxFactory.cpp\
	MyGUI_RenderItem.cpp\
	MyGUI_RenderOut.cpp\
	MyGUI_Sheet.cpp\
	MyGUI_SheetFactory.cpp\
	MyGUI_SimpleText.cpp\
	MyGUI_SkinManager.cpp\
	MyGUI_StaticImage.cpp\
	MyGUI_StaticImageFactory.cpp\
	MyGUI_StaticText.cpp\
	MyGUI_StaticTextFactory.cpp\
	MyGUI_SubSkin.cpp\
	MyGUI_SubWidgetManager.cpp\
	MyGUI_Tab.cpp\
	MyGUI_TabFactory.cpp\
	MyGUI_TextIterator.cpp\
	MyGUI_TileRect.cpp\
	MyGUI_VScroll.cpp\
	MyGUI_VScrollFactory.cpp\
	MyGUI_Widget.cpp\
	MyGUI_WidgetCreator.cpp\
	MyGUI_WidgetFactory.cpp\
	MyGUI_WidgetManager.cpp\
	MyGUI_Window.cpp\
	MyGUI_WindowFactory.cpp\
	MyGUI_XmlDocument.cpp
